Dependency injection with Spring, cancel order